Skip to content

screen input: inaccurate color display with D3D11

Similar to #19127 (closed) with screen input.

Steps to reproduce:

  • Start "Desktop" capture mode with Direct3D11 vout

=> Image is too contrasted.

Logs:

direct3d11 debug: Output max luminance: 270.0, colorspace RGB Rec.709 gamma:22 range:FULL, bits per pixel 8
direct3d11 debug: using colorspace RGB Rec.709 gamma:22 range:FULL
direct3d11 debug: Using pixel format R8G8B8X8 for chroma RV32
direct3d11 debug: psz_src_transform return pow(rgb, 1.0 / 0.45)
direct3d11 debug: psz_tone_mapping return rgb
direct3d11 debug: psz_display_transform return pow(rgb, 1.0 / 2.2)
direct3d11 debug: psz_adjust_range return max(0,min(1,(rgb + -0.062745) * 1.164384))
direct3d11 debug: psz_sampler sample = shaderTexture[0].Sample(samplerState, coords);
direct3d11 debug: psz_move_planes return rgb

VLC 4.0.0-20180802-0523-dev-win64\ Windows 10 x64 1703

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information