screen:win32: screen capture is in sRGB and full range

The same should probably be done on other screen capture sources but the actual
values may be check with an API for some of them. The Windows HDC API doesn't
provide that.

Fixes #20956