modules/access/screen/win32.c
@@ -135,6 +135,8 @@ int screen_InitCapture( demux_t *p_demux )
     p_sys->fmt.video.i_bits_per_pixel = i_bits_per_pixel;
     p_sys->fmt.video.i_sar_num = p_sys->fmt.video.i_sar_den = 1;
     p_sys->fmt.video.i_chroma         = i_chroma;
+    p_sys->fmt.video.transfer         = TRANSFER_FUNC_SRGB;
+    p_sys->fmt.video.b_color_range_full = true;
 
     switch( i_chroma )
     {
